--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
-sonar.projectKey=mkarimi_terraform-test
-sonar.organization=mkarimi
+sonar.projectKey=mkarimi20_sonar-scanner
+sonar.organization=mkarimi20
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=terraform_test
+#sonar.projectName=sonar-scanner
 #sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
+#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
